<resources>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="app_name">Gravid</string>
    <string name="hello_world">Aiding Antenatal Care</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_opened">Drawer Opened</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="imageTab1">Week 1</string>
    <string name="imageTab2">Week 2</string>
    <string name="imageTab3">Week 3</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_doctor">Doctor\'s Portal</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_search">Search</string>
    <string name="action_set">Settings</string>
    <string name="action_reset">Reset Account</string>
    <string name="action_about">About</string>
    <string name="action_signOut">Sign Out</string>
    <string name="logo_desc">App logo</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="large_text">

    </string>
    <string name="title_activity_dictionary">DictionaryActivity</string>
    <string name="text_to_speech">Convert Text to Speech</string>
    <string name="title_activity_search_adapter">SearchAdapterActivity</string>
    <string name="country_name">Nigeria</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="dlp_default_summary">Pick first Day of Last Menstrual Cycle</string>
    <string name="pref_due_date_def_summary">Pick due date</string>
    <string name="pref_avg_cycle_summary">Enter Average Menstrual Cycle</string>
    <string name="pref_weight_def_summary">Enter Weight before Pregnancy</string>
    <string name="tracker_countDown">Days To Go</string>
    <string name="current_week">WEEK</string>
    <string name="pref_title_due_date">Due Date</string>
    <string name="tracker_dueDate">DUE DATE</string>
    <string name="due_date_initial_summary">Set Due Date</string>
    <string name="activity_trimester">Current Trimester</string>
    <string name="activity_info">This Weeks Info</string>
    <string name="activity_sym">Weeks Symptoms</string>
    <string name="activity_wk"> Congrats, you are in week </string>
    <string name="title_activity_dict">DictActivity</string>
    <string name="symptoms_text">
         <![CDATA[
             <ul>
                    <li>You would have physical emotional and hormonal changes</li>
                    <li>Aversion for food </li>
                    <li>Nausea morning sickness</li>
                    <li>Tender breast</li>
                    <li>Frequent urination</li>
                    <li>Irritability</li>
                    <li>Milled abdominal cramps if several contact a doctor</li>
                    <li>Gas</li>
                    <li>Fatigue</li>
                    <li>Dizziness</li>
                  <li>Baby bump due to a swearing</li>
            </ul>
        ]]>
    </string>
    <string name="title_activity_about">About Gravid</string>
    <string name="title_activity_reset">Reset Account</string>
    <string name="about_info">Gravid Care is a mobile application for pregnant women that provides antenatal care throughout the 9 months.
    It an intelligent prenatal health care system for improving the quality of the fetus and ultimately reducing child mortality rate.
    The health of the mother is mostly closed to the health and survival of the child, infants born to mothers lacking prenatal care are
        five times more likely to die. Without prenatal care, infants are more likely to have negative health outcomes upon birth.
        In order to ensure adequate health outcomes both for the infant and the mother, maternal care, and prenatal care in particular,
        must be provided and utilized. Having a healthy pregnancy is one of the best ways to promote a healthy birth. Getting early
        and regular prenatal care improves the chances of a healthy pregnancy. </string>
    <string name="about_version">Version 1.0 \n Ayomikun Samuel</string>
    <string name="dummy">symptoms
Substances that can harm your growing baby and should be avoided include alcohol, illegal drugs, certain medications and foods. Caffeine and smoking should be discussed with your health care provider.
At this stage of pregnancy, there are very few expected symptoms however some women may have mild cramping and an increase in vaginal discharge during the ovulatory stage
</string>
    <string-array name="questions_all">
        <item>I am always feeling nausea, so I can\’t eat in the morning; what to do? </item>
        <item><b>What if I have severe vomiting, should I take medication? </b></item>
        <item><b>Sometimes, I have heart burns that seems like my heart is on fire, What should I do? </b></item>
        <item><b>I notice I have hardened stool (bowel habit worse)?</b></item>
        <item><b>Sometimes I bleed while stooling? </b></item>
        <item><b>I have mild abdominal pains? </b></item>
        <item><b>Should a pregnant woman eat for two? </b></item>
        <item><b>Why do innie belly buttons pop out during pregnancy, but not weight gain? </b></item>
        <item><b>If you have a painful urination, like a burning when I urinate, or I urinate more frequently than normally? </b></item>
        <item><b>What if I am over weight before my pregnancy, should I still eat a lot? </b></item>
        <item><b>How many clinic visits are required of me? </b></item>
        <item><b>What are the symptoms of pregnancy? </b></item>
        <item><b>I eat healthy, so should I take prenatal vitamins?</b> </item>
        <item><b>Is it safe to dye my hair during pregnancy? </b></item>
        <item><b>Can having sex affect the baby? </b></item>
        <item><b>When should I contact my doctor immediately? </b></item>
        <item><b>I experience severe leg cramps while sleeping, what should I do? </b></item>
        <item><b>I am severely constipated, also sometimes I pass blood from the stool? </b></item>
        <item><b>How to minimize morning sickness. </b></item>

    </string-array>
</resources>